Allow update of releases

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -217,6 +217,7 @@ jobs:
         with:
           tag: ${{ steps.data.outputs.release_name }}
           artifacts: "*.whl"
+          allowUpdates: true
 
   make-packages-index:
     needs: create-release
