--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -83,21 +83,7 @@ jobs:
         with:
           repository: ${{ inputs.repo }}
           ref: ${{ inputs.repo-tag }}
-          sparse-checkout: ${{ inputs.repo-subdir }}
           submodules: true
-
-      # To overcome Windows path length problems
-      - name: Move files
-        if: ${{ inputs.repo-subdir != '' }}
-        env:
-          SUBDIR: ${{ inputs.repo-subdir }}
-        run: |
-          shopt -s dotglob
-          mv $SUBDIR _tmp
-          rm -R ${SUBDIR%%/*}
-          mv -f _tmp/* .
-          rm -R _tmp
-        shell: bash
 
       - name: Set version suffix in setup.py
         run: |
@@ -113,10 +99,18 @@ jobs:
             HASH=$(git rev-parse --short HEAD)
           fi
 
+          SETUP_PY_DIR="."
+          if [[ -n "${{ inputs.repo-subdir }}" ]]; then
+            SETUP_PY_DIR="${{ inputs.repo-subdir }}"
+          fi
+
           VERSION_SUFFIX=+${HASH}pt${{ matrix.torch-version }}${{ matrix.compute-platform }}
-          sed -i $I_ARG "s/\(    version=\)\(.*\)\(\,$\)/\1\2 + \"$VERSION_SUFFIX\"\3/w /tmp/changes.txt" setup.py
+          sed -i $I_ARG "s/\(^\(    \|\t\)version=\)\(.*\)\(\,$\)/\1\3 + \"$VERSION_SUFFIX\"\4/w /tmp/changes.txt" $SETUP_PY_DIR/setup.py
           if [ ! -s "/tmp/changes.txt" ]; then
-            sed -i $I_ARG "s/\(    name=.*\,$\)/\1\n    version=\"0.0.1\" + \"$VERSION_SUFFIX\",/" setup.py
+            sed -i $I_ARG "s/\(^\(    \|\t\)name=.*\,$\)/\1\n    version=\"0.0.1\" + \"$VERSION_SUFFIX\",/w /tmp/changes.txt" $SETUP_PY_DIR/setup.py
+          fi
+          if [ ! -s "/tmp/changes.txt" ]; then
+            exit 1
           fi
         shell: bash
 
@@ -173,27 +167,26 @@ jobs:
           TORCH_VERSION: ${{ matrix.torch-version }}
           PYTHON_VERSION: ${{ matrix.python-version }}
           COMPUTE_PLATFORM: ${{ matrix.compute-platform }}
+          CUDA_VERSION: ${{ matrix.compute-platform }}
         run: bash _builder/package_specific.sh
         shell: bash
 
-      - name: Build CPU wheel
-        if: ${{ matrix.compute-platform == 'cpu' }}
-        env:
-          OS: ${{ runner.os }}
-        run: |
-          source _builder/.github/workflows/env.sh
-          python -m build --wheel --no-isolation --outdir dist
-        shell: bash
-
-      - name: Build CUDA wheel
-        if: ${{ matrix.compute-platform != 'cpu' }}
+      - name: Build wheel
         env:
           OS: ${{ runner.os }}
           CUDA_VERSION: ${{ matrix.compute-platform }}
         run: |
-          source _builder/.github/workflows/cuda/${{ runner.os }}_env.sh
+          if [[ "${{ matrix.compute-platform }}" != "cpu" ]]; then
+            source _builder/.github/workflows/cuda/${{ runner.os }}_env.sh
+          fi
           source _builder/.github/workflows/env.sh
-          python -m build --wheel --no-isolation --outdir dist
+
+          SETUP_PY_DIR="."
+          if [[ -n "${{ inputs.repo-subdir }}" ]]; then
+            SETUP_PY_DIR="${{ inputs.repo-subdir }}"
+          fi
+
+          python -m build --wheel --no-isolation --outdir dist $SETUP_PY_DIR
         shell: bash
 
       - uses: actions/upload-artifact@v4
