--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -141,7 +141,7 @@ jobs:
             [ "$1" = "$2" ] && return 1 || versionlte $1 $2
           }
 
-          SETUPTOOLS_VERSION_LIMIT=""
+          SETUPTOOLS_VERSION_LIMIT="<75.9"
           if versionlt ${{ matrix.torch-version }} "2.2.0" ; then
             SETUPTOOLS_VERSION_LIMIT="<70"
           fi
