--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -135,7 +135,9 @@ jobs:
           fi
 
           VERSION_SUFFIX=+${HASH}pt${{ matrix.torch-version }}${{ matrix.compute-platform }}
-          sed -i "s/version = \"\([^\"]*\)\"/version = \"\1${VERSION_SUFFIX}\"/w /tmp/changes.txt" $SETUP_PY_DIR/pyproject.toml
+          if [[ -f "$SETUP_PY_DIR/pyproject.toml" ]]; then
+            sed -i "s/version = \"\([^\"]*\)\"/version = \"\1${VERSION_SUFFIX}\"/w /tmp/changes.txt" $SETUP_PY_DIR/pyproject.toml
+          fi
           if [ ! -s "/tmp/changes.txt" ]; then
             sed -i "s/\(\(    \|\t\)version=\)\(.*\)\(\,$\)/\1\3 + \"$VERSION_SUFFIX\"\4/w /tmp/changes.txt" $SETUP_PY_DIR/setup.py
           fi
